gulp-webserver for preview

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^1.5.4",
     "gulp-wait": "0.0.2",
+    "gulp-webserver": "^0.9.1",
     "http-server": "^0.6.1",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
