--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-remove-empty-lines": "0.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
+    "gulp-rsync": "0.0.6",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-css-comments": "^1.2.0",
