--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "~0.1.0",
     "protractor": "^2.1.0",
+    "rsyncwrapper": "^2.0.0",
     "shelljs": "^0.2.6",
     "tmp": "0.0.23"
   },
