--- a/package.json
+++ b/package.json
@@ -18,19 +18,18 @@
     "gulp-remove-empty-lines": "0.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
-    "gulp-rsync": "0.0.6",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^1.5.4",
     "gulp-wait": "0.0.2",
-    "gulp-webserver": "^0.9.1",
     "http-server": "^0.6.1",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "~0.1.0",
     "protractor": "^2.1.0",
+    "rsyncwrapper": "^2.0.0",
     "shelljs": "^0.2.6",
     "tmp": "0.0.23"
   },
